<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pitag_setpose</name>
  <version>0.1.0</version>
  <description>
    Set robot initial pose in simulation using ceiling-mounted PiTag markers detected by a real camera.
    Subscribes to cob_fiducials detection, looks up known tag positions from config, and publishes
    to /initialpose for AMCL.
  </description>
  <maintainer email="roboticsvn.ai@gmail.com">doanhbq</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cob_object_detection_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
